; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_1139.c_usage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_1139.c_usage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [33 x i8] c"syntax: %s [-spSrPanc] -h host\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [35 x i8] c" -h <host/ip>\09target hostname/ip.\0A\00", align 1
@.str.2 = private unnamed_addr constant [45 x i8] c" -s <host/ip>\09source hostname/ip. (spoofed)\0A\00", align 1
@.str.3 = private unnamed_addr constant [37 x i8] c" -p <port>\09target port. (dest port)\0A\00", align 1
@.str.4 = private unnamed_addr constant [38 x i8] c" -S <port>\09shellcode listening port.\0A\00", align 1
@.str.5 = private unnamed_addr constant [41 x i8] c" -r <addr>\09define address. (0x08XXXXXX)\0A\00", align 1
@.str.6 = private unnamed_addr constant [45 x i8] c" -P <value>\09pop value, distance from start.\0A\00", align 1
@.str.7 = private unnamed_addr constant [52 x i8] c" -a <value>\09amount of packet(s) to send. (spoofed)\0A\00", align 1
@.str.8 = private unnamed_addr constant [37 x i8] c" -n\09\09don't spoof. (real connection)\0A\00", align 1
@.str.9 = private unnamed_addr constant [44 x i8] c" -c\09\09crash ethereal. (test vulnerability)\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @usage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i8* %3)
  %5 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0))
  %6 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.2, i64 0, i64 0))
  %7 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.3, i64 0, i64 0))
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.4, i64 0, i64 0))
  %9 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.5, i64 0, i64 0))
  %10 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.6, i64 0, i64 0))
  %11 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.7, i64 0, i64 0))
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.8, i64 0, i64 0))
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.9, i64 0, i64 0))
  %14 = call i32 @exit(i32 0) #3
  unreachable
}

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
